<resources>
    <string name="app_name">Online Shop</string>
    <string name="hair">Hair</string>
    <string name="body">Body</string>
    <string name="face">Face</string>
    <string name="search">Search</string>
    <string name="welcome">Hello, Emma</string>
    <string name="beginningText">Let\'s find your favourite cosmetics</string>
    <string name="user_photo">User photo</string>
    <string name="Skin">Skin</string>
    <string name="most_popular">Most popular</string>
    <string name="category_filter">Category Filter</string>
    <string name="product_name">Product Name</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="like_item">like item</string>
    <string name="more">more</string>
    <string name="back">back</string>
    <string name="description">description</string>
    <string name="product_disc">Japanese cherry blossom is a body lotion product uses to enhance the smell of the body and make it more soft.</string>
</resources>