<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="59dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_search_svgrepo_com__2_" />

        <TextView
            android:id="@+id/bodyTV"
            android:layout_width="55sp"
            android:layout_height="80sp"
            android:layout_marginBottom="92dp"
            android:fontFamily="@font/rubik_bold_italic"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/body"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hairTV"
            android:layout_width="50sp"
            android:layout_height="80sp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rubik_bold_italic"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/hair"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/bodyTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/faceTV"
            android:layout_width="50sp"
            android:layout_height="80sp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rubik_bold_italic"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/face"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/hairTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/skinTV"
            android:layout_width="65sp"
            android:layout_height="80sp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rubik_bold_italic"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Skin"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/faceTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/rubik"
        android:text="@string/beginningText"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/welcomeTV"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTV" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/user_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/filterIV"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_filter"
        android:contentDescription="@string/category_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/filterIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filterIV"
        app:layout_constraintTop_toTopOf="@+id/filterIV" />


</androidx.constraintlayout.widget.ConstraintLayout>
